terraform/ansible/apps_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps-ingress
  namespace: apps
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: error
      port:
        name: svc-port
  rules:
    - host: validator-front.jumiainternal.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: first
                port:
                  name: svc-port
    - host: validator-back.jumiainternal.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: second
                port:
                  name: svc-port
    - host: jenkins.jumiainternal.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jenkins
                port:
                  name: http
